<resources>
    <string name="app_name">CityHelper</string>

    <!--Strings for Bottom Navigation Bar-->
    <string name="issues">Issues</string>
    <string name="report_notes">Reports and Notes</string>
    <string name="profile">Profile</string>

    <!--String for Reports and Notes Area-->
    <string name="reports">My Reports</string>
    <string name="notes">My Notes</string>
    <string name="button_goto">Go to</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim praesent elementum facilisis leo vel. Elementum eu facilisis sed odio morbi quis commodo odio aenean. Et malesuada fames ac turpis egestas sed tempus urna. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Sit amet cursus sit amet dictum sit amet justo. Ut consequat semper viverra nam libero justo. Justo laoreet sit amet cursus sit amet dictum sit. Elit eget gravida cum sociis natoque penatibus et. Sodales ut eu sem integer vitae justo eget. Venenatis tellus in metus vulputate.
Ac ut consequat semper viverra nam. Ultricies mi quis hendrerit dolor magna eget. Purus viverra accumsan in nisl nisi scelerisque. Donec ultrices tincidunt arcu non sodales neque. Vivamus at augue eget arcu dictum. Nulla aliquet porttitor lacus luctus accumsan. Diam sit amet nisl suscipit adipiscing bibendum est ultricies. Mauris commodo quis imperdiet massa tincidunt nunc. Quam quisque id diam vel quam elementum pulvinar etiam non. Dictum varius duis at consectetur lorem donec massa.
Massa eget egestas purus viverra accumsan in nisl nisi. Est velit egestas dui id ornare arcu odio. Eget arcu dictum varius duis at consectetur lorem donec massa. Elit ut aliquam purus sit. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse. Lorem dolor sed viverra ipsum nunc. Tincidunt eget nullam non nisi. Metus vulputate eu scelerisque felis imperdiet proin. Tortor condimentum lacinia quis vel eros donec ac odio tempor. Nulla porttitor massa id neque aliquam vestibulum morbi blandit. Nunc sed augue lacus viverra vitae. Neque egestas congue quisque egestas diam. Turpis massa tincidunt dui ut ornare lectus sit amet.
Odio eu feugiat pretium nibh. Ut sem nulla pharetra diam sit amet nisl suscipit. Scelerisque eleifend donec pretium vulputate sapien nec sagittis. Pellentesque nec nam aliquam sem et tortor. Vitae suscipit tellus mauris a. A cras semper auctor neque vitae tempus quam. Fringilla est ullamcorper eget nulla facilisi etiam. Neque egestas congue quisque egestas. Dignissim convallis aenean et tortor at. Risus nullam eget felis eget. Tristique senectus et netus et. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Diam in arcu cursus euismod quis viverra nibh. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et. Enim tortor at auctor urna nunc id cursus metus. Mauris a diam maecenas sed enim ut sem viverra. Non consectetur a erat nam. A cras semper auctor neque vitae tempus. Condimentum id venenatis a condimentum. Fermentum posuere urna nec tincidunt praesent semper feugiat.</string>

    <!--String for all buttons-->
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_create">Create</string>
    <string name="btn_back">Back</string>

    <!--String for RecyclerView Report List Element-->
    <string name="report_title">Report Title</string>
    <string name="report_description_preview">Report Description Preview</string>
    <string name="report_location">Random street</string>
    <string name="report_user">Created by: Example User</string>
    <string name="report_city">City 1</string>


    <!--String for RecyclerView Note List Element-->
    <string name="note_title">Note Title</string>
    <string name="note_description">Note description preview</string>
    <string name="note_id">1</string>

    <!--String for note creation-->
    <string name="note_title_create">Your note title</string>
    <string name="note_description_create">Note description</string>
    <string name="description">Description</string>

    <!--String for report creation-->
    <string name="report_title_hint">Your report title</string>
    <string name="report_description_hint">Write a small description to help others understand the problem</string>
    <string name="report_location_title">Street Name</string>
    <string name="report_location_hint1">Example Street</string>
    <string name="report_location_hint2">Location Example</string>


    <!--String for Toast Messages-->
    <string name="missing_fields">Some fields are empty</string>
    <string name="successful_delete">Note deleted successfully</string>
    <string name="successful_create">Note created successfully</string>


    <!--Strings for Login Page-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account"><u>Don\'t have an account? Register here!</u></string>
    <string name="app_slogan">Help us helping you</string>
    <string name="my_notes">Just my notes</string>
    <string name="error_login">Username or password are incorrect</string>

    <!--Shared preferences files-->
    <string name="logindata" translatable="false">login_info</string>
    <string name="isLogged" translatable="false">isLogged</string>
    <string name="userId" translatable="false">userId</string>
    <string name="user" translatable="false">user</string>
    <string name="isGeofenceActive" translatable="false">isChecked</string>
    <string name="radius_meter" translatable="false">radius</string>

    <!--Map Related String-->
    <string name="title_activity_maps" translatable="false">Map</string>

    <!--Strings for toast responses to Webservices results-->
    <string name="report_deleted_success">Report was successfully deleted</string>
    <string name="report_deleted_unseccessfully">Unable to delete your report</string>
    <string name="report_create_success">Report created successfully</string>
    <string name="report_create_unsuccess">Unable to create your report</string>
    <string name="report_edit_success">Report edited successfully</string>
    <string name="report_edit_unsuccess">Unable to edit report</string>
    <string name="report_city_title">Problem\'s City</string>
    <string name="report_type_problem">Type of problem</string>

    <!--Strings for buttons and text on map fragment-->
    <string name="filter_cyan_markers">Infrastructures</string>
    <string name="filter_yellow_markers">Signaling</string>
    <string name="filter_green_markers">Sanitation</string>
    <string name="refresh">Refresh</string>
    <string name="distance100m">100m</string>
    <string name="distance500m">500m</string>
    <string name="distance1000m">1Km</string>
    <string name="distance2000m">2Km</string>
    <string name="filter_text">Filters</string>
    <string name="distance_text">Distance</string>
    <string name="createdby">Created by:</string>

    <!--Information button text-->
    <string name="too_bright">I see it\'s a very sunny day today! We recommend the use of sunglasses to avoid future sight problems</string>
    <string name="not_too_bright">The sun is not too strong today.</string>

    <!--Notification Strings-->
    <string name="channel_name">Be careful!</string>
    <string name="content_text">You just entered in an area where multiple reports have been created.</string>
    <string name="notification_channel_description">Cityhelper status notification</string>
    <string name="summary">summary</string>

    <!--Strings for geofence-->
    <string name="geofence_not_available">It wasn\'t possible to select a warning area.</string>
    <string name="geofence_too_many">Too many warning areas.</string>
    <string name="geofence_pending">Too many requests for warning area.</string>

    <!--Strings for profile area-->
    <string name="logout">Logout</string>
    <string name="geofence">Warning area radius:</string>
    <string name="hint_radius">Radius</string>
    <string name="unit">meters</string>
    <string name="confirm">Confirm</string>
    <string name="radius_changed">Radius changed successfully</string>


</resources>