<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        style="@style/SubTitles"
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="141dp"
        android:layout_height="148dp"
        android:src="@drawable/app_main_logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_title"/>

    <LinearLayout
        android:id="@+id/login_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_logo"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"/>

        <Button
            style="@style/Button"
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <Button
        style="@style/Button"
        android:id="@+id/notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/my_notes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>