<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".NoteDescriptionActivity">

    <TextView
        style="@style/SubTitles"
        android:id="@+id/note_description_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/note_title"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/red_border"
        android:layout_weight="2"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/note_description_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle">

        <Button
            style="@style/Button"
            android:id="@+id/note_description_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:layout_weight="1"
            android:layout_marginEnd="20dp" />

        <Button
            style="@style/Button"
            android:id="@+id/note_description_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp">

        <Button
            style="@style/Button"
            android:id="@+id/note_description_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:layout_weight="1"
            android:layout_marginHorizontal="80dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/noteId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/note_id"
        android:visibility="invisible"/>
</LinearLayout>