<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportDescriptionActivity">

    <ImageView
        android:id="@+id/report_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/report_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_user" />

        <TextView
            android:id="@+id/report_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/report_description_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_title" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_border"
        app:layout_constraintTop_toBottomOf="@+id/report_description">
        <TextView
            android:id="@+id/report_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/report_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_location"
            app:layout_constraintBottom_toBottomOf="@+id/report_title"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        style="?android:attr/buttonBarStyle">

        <Button
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"/>

        <Button
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>