<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageButton
        android:id="@+id/info_btn"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_info_24"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">
        <TextView
            style="@style/SubTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_text"
            android:layout_marginStart="10dp"/>
        <HorizontalScrollView
            android:id="@+id/filter_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">
                    <TextView
                        style="@style/SubTitles"
                        android:id="@+id/refreshMarkers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        app:drawableTopCompat="@drawable/ic_baseline_refresh_24" />
                    <TextView
                        style="@style/SubTitles"
                        android:id="@+id/filterInfrastructures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_cyan_markers"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        app:drawableTopCompat="@drawable/ic_baseline_location_infrastuctures_on_24" />
                    <TextView
                        style="@style/SubTitles"
                        android:id="@+id/filterSignaling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_yellow_markers"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        app:drawableTopCompat="@drawable/ic_baseline_location_signaling_on_24" />
                    <TextView
                        style="@style/SubTitles"
                        android:id="@+id/filterSanitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_green_markers"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        app:drawableTopCompat="@drawable/ic_baseline_location_sanitation_on_24" />

                </LinearLayout>



            </LinearLayout>

        </HorizontalScrollView>
        <TextView
            style="@style/SubTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_text"
            android:layout_marginStart="10dp"/>
        <HorizontalScrollView
            android:id="@+id/distance_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">
                    <Button
                        style="@style/Button"
                        android:id="@+id/distance100m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance100m"
                        android:layout_marginHorizontal="10dp"/>
                    <Button
                        style="@style/Button"
                        android:id="@+id/distance500m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance500m"
                        android:layout_marginHorizontal="10dp"/>
                    <Button
                        style="@style/Button"
                        android:id="@+id/distance1000m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance1000m"
                        android:layout_marginHorizontal="10dp"/>
                    <Button
                        style="@style/Button"
                        android:id="@+id/distance2000m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance2000m"
                        android:layout_marginHorizontal="10dp"/>
                </LinearLayout>



            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


</RelativeLayout>
